--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/scss/styles.scss",
               "node_modules/bootstrap/scss/bootstrap.scss"
              
@@ -97,6 +98,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/scss/styles.scss",
               "node_modules/bootstrap/scss/bootstrap.scss"
             
