--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/service-worker": "~11.0.6",
     "ag-grid-angular": "^25.0.1",
     "ag-grid-community": "^25.0.1",
+    "angular-otp-box": "^1.0.1",
     "bootstrap": "^4.5.3",
     "primeng": "^11.2.0",
     "rxjs": "~6.6.0",
