--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/scss/styles.scss",
-              "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/primeng/resources/themes/saga-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/bootstrap/scss/bootstrap.scss"
               
             ],
             "scripts": []
@@ -102,9 +100,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/scss/styles.scss",
-              "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/primeng/resources/themes/saga-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/bootstrap/scss/bootstrap.scss"
             ],
             "scripts": []
           }
